fixed contacts list alignment

--- a/css/custom.css
+++ b/css/custom.css
@@ -103,8 +103,8 @@ a:hover {
 }
 
 .contact nav {
-    float: left;
-    text-align:left;
+    text-align:center;
+    align-content:center;
 }
 
 .contact nav li {
